Added switch for bypassing protected media identifier permission

For testing protected content we need to bypass the prompt
for permission to play protected content. This change add the
switch --unsafely-allow-protected-media-identifier-for-domain
which will disable the info bar when protected content needs
permission when playing from localhost.

BUG=718608

Review-Url: https://codereview.chromium.org/2816773002
Cr-Commit-Position: refs/heads/master@{#471150}

Former-commit-id: 2ae33ffef0abd60c2fb050dbbadafae3345c568a